<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow"
        android:hint="@string/first_name"
        android:singleLine="true"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"/>
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shadow"
        android:hint="@string/last_name"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"/>
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shadow"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"/>
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shadow"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"/>
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shadow"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"/>
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shadow"
        android:hint="@string/company_name"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"/>
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_phone_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shadow"
        android:hint="@string/phone_no"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"/>
</LinearLayout>
