<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".LoginScreenActivity">


    <com.fracappzstudios.oilfieldnotifications.view.FullScreenVideoView
        android:id="@+id/video_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:clickable="false"
        tools:context=".MainActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_overlay"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="OILFIELD \n NOTIFICATIONS"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/txt7"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/ll_login_menu"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <LinearLayout
                    android:id="@+id/ll_main"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:visibility="gone">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shadow"
                            android:hint="@string/first_name"
                            android:paddingBottom="8dp"
                            android:paddingLeft="16dp"
                            android:paddingTop="8dp"
                            android:focusable="true"
                            android:singleLine="true"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray" />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/shadow"
                            android:hint="@string/last_name"
                            android:paddingBottom="8dp"
                            android:paddingLeft="16dp"
                            android:paddingTop="8dp"
                            android:singleLine="true"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray" />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/shadow"
                            android:hint="@string/email_address"
                            android:inputType="textEmailAddress"
                            android:paddingBottom="8dp"
                            android:paddingLeft="16dp"
                            android:paddingTop="8dp"
                            android:singleLine="true"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray" />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/shadow"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingBottom="8dp"
                            android:paddingLeft="16dp"
                            android:paddingTop="8dp"
                            android:singleLine="true"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray" />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/shadow"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:paddingBottom="8dp"
                            android:paddingLeft="16dp"
                            android:paddingTop="8dp"
                            android:singleLine="true"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray" />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_company_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/shadow"
                            android:hint="@string/company_name"
                            android:paddingBottom="8dp"
                            android:paddingLeft="16dp"
                            android:paddingTop="8dp"
                            android:singleLine="true"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray" />

                        <com.vicmikhailau.maskededittext.MaskedEditText
                            android:id="@+id/et_phone_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shadow"
                            android:layout_marginTop="8dp"
                            android:paddingBottom="8dp"
                            android:paddingLeft="16dp"
                            android:paddingTop="8dp"
                            android:hint="@string/phone_no"
                            android:inputType="phone"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray"
                            android:digits="0123456789"
                            app:mask="(###)###-####"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:visibility="gone">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shadow"
                            android:hint="@string/email_address"
                            android:paddingBottom="8dp"
                            android:paddingLeft="16dp"
                            android:paddingTop="8dp"
                            android:singleLine="true"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray" />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_pwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/shadow"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingBottom="8dp"
                            android:paddingLeft="16dp"
                            android:paddingTop="8dp"
                            android:singleLine="true"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray" />

                        <android.support.v7.widget.AppCompatCheckBox
                            android:id="@+id/chk_remember_me"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginTop="8dp"
                            android:text="@string/remember_me" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/roundshape_btn"
                        android:minWidth="120dp"
                        android:text="@string/loigin"
                        android:textColor="@color/blue_light" />
                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/roundshape_btn"
                        android:minWidth="120dp"
                        android:text="@string/signup"
                        android:textColor="@color/blue_light" />
                </TableRow>
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_forgot_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textCapWords"
                android:minWidth="150dp"
                android:text="@string/forgot_pwd"
                android:textColor="@color/blue" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
