<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".NewGroupActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:contentInsetEnd="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize">
                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_back" />
                <TextView
                    android:id="@+id/tv_create"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:paddingRight="8dp"
                    android:text="@string/create"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt6"
                    android:gravity="center"/>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_group"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:onClick="onClickSelectGroupImage"
                android:src="@drawable/ic_group"/>
            <EditText
                android:id="@+id/et_group_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/name_this_group"
                android:textSize="@dimen/txt6"
                android:singleLine="true"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/et_group_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="5"
            android:gravity="top|left"
            android:hint="@string/add_a_description"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>

        <Button
            android:id="@+id/btn_add_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Members to this group"
            android:inputType="textCapSentences"
            android:textSize="@dimen/txt6"
            android:background="@drawable/shadow_rect_green"/>
    </LinearLayout>
</LinearLayout>
